# gctool

./: .gitignore  Cargo.toml  LICENSE
src/: dol.rs  gcm.rs  lib.rs  main.rs
src/archive/: mod.rs
src/archive/rarc/: mod.rs
src/cmd/: mod.rs
src/cmd/archive/rarc/: compress.rs  extract.rs
src/cmd/compression/: decompress.rs
src/cmd/iso/: list.rs  mod.rs
src/compression/: compress.rs  mod.rs
src/rarc/: list.rs  mod.rs
src/util/: bytes.rs  mod.rs
